--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -41,11 +41,18 @@
   "missionBody1": " Minis is on a mission to revolutionize snacking. Our purpose is to infuse joy and excitement into every snack-time moment. We are committed to crafting miniature delights that elevate your everyday experiences. Our mission is to continually push the boundaries of snack innovation, introducing new flavors, textures, and sensations that surprise and satisfy. We aspire to set the standard for what's miniature, magnificent, and memorable in the world of snacking.",
   "missionBody2": "We aim to be your first choice for snacks that perfectly balance quality, deliciousness, and fun. At Minis, our mission is to make snacking a source of delight for all, and we invite you to join us on this delicious journey. Thank you for being a part of our mission to redefine snacking, one Minis creation at a time.",
 
-  "crispyDragee": "Discover our Crispy Dragee, a snack that's all about the perfect bite. Each piece is a mini masterpiece of crispiness, with a candy shell that shatters to reveal a delectable surprise inside. It's the ultimate combination of crunchy satisfaction and sweet indulgence. Try our Crispy Dragee and experience the joy of snacking at its finest.",
+  "crispyDragee": "A snack combining crispiness and surprise. Each piece has a candy shell revealing a delightful interior.",
 
-  "chocolateDragee": "Step into a world of sweetness with our Chocolate Dragee. These bite-sized delights feature a delectable chocolate center, encased in a crisp candy shell. Each piece is a burst of rich, creamy chocolate flavor that will transport your taste buds to a world of pure delight. Savor the moment with our Chocolate Dragee and experience a miniature masterpiece that's all about indulgence.",
+  "chocolateDragee": "Bite-sized treats with a chocolate core and crisp shell. Each offers a burst of rich chocolate and satisfying crunch.",
 
-  "peanutDragee": "For peanut enthusiasts, our Peanut Dragee is a true treasure. These mini marvels feature whole peanuts, enveloped in a vibrant candy coating. The contrast between the sweet candy shell and the hearty peanut inside creates a satisfying crunch and a peanut goodness that's hard to resist. Give in to your peanut cravings with our Peanut Dragee and enjoy a delightful snack that's both wholesome and delicious.",
+  "peanutDragee": "Mini treats with whole peanuts in a candy coating. The sweet shell contrasts with hearty peanuts for a satisfying crunch.",
+
+  "cornetteProductTitle": "Cornetto",
+  "umbrellaProductTitle": "Umbrella",
+
+  "cornetteProduct": "A delightful pastry filled with rich hazelnut cream and cocoa. Its flaky texture and creamy filling offer a perfect blend of crunch and smoothness.",
+
+  "umbrellaProduct": "A whimsical chocolate treat shaped like an umbrella, crafted from smooth milk chocolate. Its playful form and creamy taste provide a joyous chocolate experience.",
 
   "galleryBody": "Explore our gallery to feast your eyes on a spectrum of colorful, delectable creations. From our vibrant candy-coated dragees to the luscious chocolate delights, each image tells a story of the joy we bring to snacking. Discover the artistry and delight in every miniature masterpiece.",
 
