--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -43,11 +43,18 @@
 
   "missionBody2": "Мы стремимся быть вашим первым выбором для закусок, которые идеально сочетают в себе качество, вкус и удовольствие. В Minis наша миссия - сделать перекусывание источником радости для всех, и мы приглашаем вас присоединиться к нам в этом вкусном путешествии. Спасибо, что стали частью нашей миссии по переопределению перекусывания, одно творение Minis за раз.",
 
-  "crispyDragee": "Откройте для себя Crispy Dragee - закуску, которая предлагает идеальный укус. Каждый кусочек - это мини-шедевр хрупкости с ломающейся сладкой оболочкой, которая раскрывает восхитительный сюрприз внутри. Это уникальное сочетание хрустящего удовлетворения и сладкого изыска. Попробуйте Crispy Dragee и ощутите радость перекусывания во всей ее красе.",
+  "crispyDragee": "Закуска, сочетающая хрусткость и неожиданность. Каждый кусочек с конфетной оболочкой раскрывает восхитительную начинку.",
 
-  "chocolateDragee": "Погрузитесь в мир сладостей с нашим Chocolate Dragee. Эти миниатюрные удовольствия имеют восхитительное шоколадное ядро, обернутое в хрупкую сладкую оболочку. Каждый кусочек - это всплеск богатого, кремового вкуса шоколада, который перенесет ваши вкусовые рецепторы в мир чистой радости.",
+  "chocolateDragee": "Маленькие угощения с шоколадным сердцевиной и хрустящей оболочкой. Каждое из них дарит вкус богатого шоколада и удовлетворяющий хруст.",
 
-  "peanutDragee": "Для ценителей арахиса наш Peanut Dragee - настоящее сокровище. Эти мини-чудеса представляют собой целый арахис, обернутый в яркую конфетную оболочку. Контраст между сладкой конфетной оболочкой и сытным арахисом внутри создает удовлетворительное хрустящее удовольствие и арахисное блаженство, от которого трудно устоять.",
+  "peanutDragee": "Мини-лакомства с цельными арахисами в конфетной глазури. Сладкая оболочка контрастирует с плотным арахисом, создавая удовлетворяющий хруст.",
+
+  "cornetteProductTitle": "Корнеттo",
+  "umbrellaProductTitle": "Зонтик",
+
+  "cornetteProduct": "Восхитительная выпечка, наполненная богатым кремом с лесным орехом и какао. Ее слоистая текстура и кремовая начинка предлагают идеальное сочетание хрусткости и нежности.",
+
+  "umbrellaProduct": "Игривое шоколадное угощение в форме зонтика, сделанное из гладкого молочного шоколада. Его забавная форма и кремовый вкус обеспечивают радостный шоколадный опыт.",
 
   "galleryBody": "Исследуйте нашу галерею, чтобы насладиться разноцветными и вкусными творениями. От ярких конфетных драже до восхитительных шоколадных удовольствий, каждое изображение рассказывает историю радости, которую мы приносим в мир перекусывания. Откройте для себя художественное мастерство и радость в каждом миниатюрном шедевре.",
 
