--- a/public/locales/tr/common.json
+++ b/public/locales/tr/common.json
@@ -43,11 +43,18 @@
 
   "missionBody2": "Kalite, lezzet ve eğlenceyi mükemmel bir şekilde dengeli atıştırmalıkların ilk tercihi olmayı amaçlıyoruz. Minis olarak misyonumuz, herkes için atıştırmalığı bir neşe kaynağı haline getirmektir ve sizi bu lezzetli yolculuğumuza katılmaya davet ediyoruz. Atıştırmalığı yeniden tanımlama misyonumuzun bir parçası olduğunuz için teşekkür ederiz.",
 
-  "crispyDragee": "Mükemmel bir ısırık hakkında olan Crispy Dragee'yi keşfedin. Her biri, içindeki enfes sürprizi açığa çıkaran bir şeker kabuğu olan bir minyatür başyapıttır. Sert bir tatmin ve tatlı bir lüksün mükemmel kombinasyonudur. Crispy Dragee'mizi deneyin ve atıştırmalığın tadını en üst düzeyde yaşamanın keyfini çıkarın.",
+  "crispyDragee": "Mükemmel bir ısırık hakkında olan Gevrekli drajemizi keşfedin. Her biri, içindeki enfes sürprizi açığa çıkaran bir şeker kabuğu olan bir minyatür başyapıttır.",
 
-  "chocolateDragee": "Tatlılık dünyasına bir adım atın ve Chocolate Dragee ile ödüllendirin. Bu minyatür lezzetler, gevrek bir şeker kabuğunda bulunan leziz bir çikolata merkezine sahiptir. Her biri sizi saf neşenin bir dünyasına taşıyan zengin, kremsi çikolata lezzetinin patlamasıdır. Chocolate Dragee'mizle anın tadını çıkarın ve bunun sadece lüks olduğu bir minyatür başyapıtı deneyimleyin.",
+  "chocolateDragee": "Tatlılık dünyasına bir adım atın ve Çikolatalı drajemiz ile ödüllendirin. Bu minyatür lezzetler, gevrek bir şeker kabuğunda bulunan leziz bir çikolata merkezine sahiptir.",
 
-  "peanutDragee": "Yer fıstığı sevenler için, Yer Fıstığı Drajemiz gerçek bir hazine. Bu minik harikalar, canlı bir şeker kaplamaya sarılmış tam yer fıstığı içerir. Tatlı şeker kabuğu ile sağlam yer fıstığı arasındaki kontrast, doyurucu bir çıtırtı ve yer fıstığı tadı yaratır. Yer fıstığı isteğinize yenik düşün ve hem sağlıklı hem de lezzetli bir atıştırmalığın tadını çıkarın.",
+  "peanutDragee": "Yer fıstığı sevenler için, Yer Fıstığı Drajemiz gerçek bir hazine. Bu minik harikalar, canlı bir şeker kaplamaya sarılmış tam yer fıstığı içerir.",
+
+  "cornetteProductTitle": "Kornet",
+  "umbrellaProductTitle": "Şemsiye",
+
+  "cornetteProduct": "Kakao ve zengin fındık kreması ile dolu leziz tat. Katmanlı dokusu ve kremsi dolgusu, çıtırlık ve pürüzsüzlüğün mükemmel bir karışımını sunar.",
+
+  "umbrellaProduct": "Pürüzsüz sütlü çikolatadan yapılmış şemsiye şeklinde eğlenceli bir çikolata lezzeti. Oynak formu ve kremsi tadı, neşeli bir çikolata deneyimi sağlar.",
 
   "galleryBody": "Gözlerinizi renkli, leziz yaratıkların bir yelpazesine daldırmak için galerimizi keşfedin. Canlı şeker kaplamalı drajelerimizden lezzetli çikolata harikalarına kadar her resim, atıştırmalıklara getirdiğimiz neşenin hikayesini anlatıyor. Her minyatür başyapıtta sanat ve neşenin tadını çıkarın.",
 
