--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -61,5 +61,11 @@
   "contactBody": "Свяжитесь с нами, и наша команда всегда здесь, чтобы помочь. Ваши мысли важны, и мы здесь, чтобы обеспечить, чтобы ваш опыт с нами был так же радостным, как наши закуски. Свяжитесься с нами сегодня!",
 
   "readMore": "Читать далее",
-  "readLess": "Свернуть"
+  "readLess": "Свернуть",
+
+  "catalog.title": "Каталог Минис",
+  "catalog.previewButton": "Просмотр каталога",
+  "catalog.downloadButton": "Скачать каталог",
+  "catalog.previewTitle": "Предварительный просмотр каталога Минис",
+  "catalog.download": "Скачать"
 }
